work in progress migrating buster->bullseye (idaholab/Malcolm#57)

--- a/sensor-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-19/16346759855.desktop
+++ b/sensor-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-19/16346759855.desktop
@@ -8,3 +8,4 @@ Type=Application
 Icon=view-restore
 Categories=Network;
 StartupNotify=true
+X-XFCE-Source=file:///usr/share/applications/sensor-services-status.desktop
