--- a/sensor-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-22/16346760098.desktop
+++ b/sensor-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-22/16346760098.desktop
@@ -8,3 +8,4 @@ Type=Application
 Icon=reload
 Categories=Network;
 StartupNotify=true
+X-XFCE-Source=file:///usr/share/applications/sensor-services-full-restart.desktop
