update installer menus

--- a/sensor-iso/config/bootloaders/grub-pc/grub.cfg
+++ b/sensor-iso/config/bootloaders/grub-pc/grub.cfg
@@ -6,7 +6,7 @@ source /boot/grub/config.cfg
 # Installer (if any)
 if @ENABLE_INSTALL_MENU@; then
 
-submenu 'Install options ...' --hotkey=a {
+submenu 'Install Hedgehog Linux ...' --hotkey=a {
 
 	source /boot/grub/theme.cfg
 
