--- a/sensor-iso/config/bootloaders/syslinux_common/install_text.cfg
+++ b/sensor-iso/config/bootloaders/syslinux_common/install_text.cfg
@@ -1,5 +1,5 @@
 menu begin install
-	menu label ^Install
+	menu label ^Install Hedgehog Linux
 	menu title Install
 	include stdmenu.cfg
 	label mainmenu
