--- a/.github/workflows/elasticsearch-build-and-push-ghcr.yml
+++ b/.github/workflows/elasticsearch-build-and-push-ghcr.yml
@@ -1,4 +1,4 @@
-name: name-map-ui-build-and-push-ghcr
+name: elasticsearch-build-and-push-ghcr
 
 on:
   push:
@@ -8,8 +8,7 @@ on:
     tags:
       - v*
     paths:
-      - 'name-map-ui/**'
-      - 'Dockerfiles/name-map-ui.Dockerfile'
+      - 'Dockerfiles/elasticsearch.Dockerfile'
       - 'shared/bin/*'
   workflow_dispatch:
   repository_dispatch:
@@ -55,6 +54,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfiles/name-map-ui.Dockerfile
+          file: ./Dockerfiles/elasticsearch.Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/malcolmnetsec/name-map-ui:${{ steps.extract_branch.outputs.branch }}
+          tags: ghcr.io/${{ github.repository_owner }}/malcolmnetsec/elasticsearch-od:${{ steps.extract_branch.outputs.branch }}
