Work in progress on integrating MAC-based ICS 'best guess' lookups

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -26,6 +26,35 @@ filter {
         refresh_interval => 0
       }
 
+      # also look up mac in ICS vendors list
+      ruby {
+        id => "ics_mac_lookup_src"
+        path => "/usr/share/logstash/malcolm-ruby/ics_mac_lookup.rb"
+        script_params => {
+          "source" => "[source][mac][0]"
+          "map_path" => "/etc/ics_macs.yaml"
+          "target" => "[@metadata][ics_guess_oui_src]"
+        }
+      }
+      if ([@metadata][ics_guess_oui_src]) {
+        if (!("ics" in [tags])) {
+          mutate { id => "mutate_add_tag_ics_best_guess_from_oui_src"
+                   add_tag => [ "ics_best_guess" ] }
+        }
+        if (![zeek_bestguess][category]) {
+          mutate {
+            id => "mutate_add_fields_zeek_bestguess_category_from_ics_guess_oui_src"
+            add_field => { "[zeek_bestguess][category]" => "%{[@metadata][ics_guess_oui_src]}" }
+          }
+        }
+        if (![zeek][orig_l2_oui]) {
+          mutate {
+            id => "mutate_add_fields_orig_l2_oui_from_ics_guess_oui_src"
+            add_field => { "[zeek][orig_l2_oui]" => "%{[@metadata][ics_guess_oui_src]}" }
+          }
+        }
+      }
+
       if ([zeek][orig_l2_oui]) {
 
         # merge orig_l2_oui into srcOui array (with a count of 1)
@@ -58,6 +87,35 @@ filter {
         target => "[zeek][resp_l2_oui]"
         ouifile => "/usr/share/logstash/config/oui-logstash.txt"
         refresh_interval => 0
+      }
+
+      # also look up mac in ICS vendors list
+      ruby {
+        id => "ics_mac_lookup_dst"
+        path => "/usr/share/logstash/malcolm-ruby/ics_mac_lookup.rb"
+        script_params => {
+          "source" => "[destination][mac][0]"
+          "map_path" => "/etc/ics_macs.yaml"
+          "target" => "[@metadata][ics_guess_oui_dst]"
+        }
+      }
+      if ([@metadata][ics_guess_oui_dst]) {
+        if (!("ics" in [tags])) {
+          mutate { id => "mutate_add_tag_ics_best_guess_from_oui_dst"
+                   add_tag => [ "ics_best_guess" ] }
+        }
+        if (![zeek_bestguess][category]) {
+          mutate {
+            id => "mutate_add_fields_zeek_bestguess_category_from_ics_guess_oui_dst"
+            add_field => { "[zeek_bestguess][category]" => "%{[@metadata][ics_guess_oui_dst]}" }
+          }
+        }
+        if (![zeek][orig_l2_oui]) {
+          mutate {
+            id => "mutate_add_fields_resp_l2_oui_from_ics_guess_oui_dst"
+            add_field => { "[zeek][resp_l2_oui]" => "%{[@metadata][ics_guess_oui_dst]}" }
+          }
+        }
       }
 
       if ([zeek][resp_l2_oui]) {
