--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -321,6 +321,9 @@ filter {
       }
     }
 
+    mutate { id => "mutate_add_tag_ics_bacnet_log"
+             add_tag => [ "ics" ] }
+
   } else if ([log_source] == "bestguess") {
     #############################################################################################################################
     # bestguess.log
@@ -345,7 +348,7 @@ filter {
       }
     }
 
-    mutate { id => "mutate_add_tag_ics_best_guess"
+    mutate { id => "mutate_add_tag_ics_best_guess_log"
              add_tag => [ "ics_best_guess" ] }
 
   } else if ([log_source] == "bsap_ip_header") {
@@ -380,6 +383,9 @@ filter {
         "[zeek_cols][service]" => "bsap"
       }
     }
+
+    mutate { id => "mutate_add_tag_ics_bsap_ip_header_log"
+             add_tag => [ "ics" ] }
 
   } else if ([log_source] == "bsap_ip_rdb") {
     #############################################################################################################################
@@ -420,6 +426,9 @@ filter {
                remove_field => [ "[zeek_cols][data]" ] }
     }
 
+    mutate { id => "mutate_add_tag_ics_bsap_ip_rdb_data_log"
+             add_tag => [ "ics" ] }
+
   } else if ([log_source] == "bsap_ip_unknown") {
     #############################################################################################################################
     # bsap_ip_unknown.log (dropped for now, see above)
@@ -453,6 +462,9 @@ filter {
       }
     }
 
+    mutate { id => "mutate_add_tag_ics_bsap_ip_unknown_log"
+             add_tag => [ "ics" ] }
+
   } else if ([log_source] == "bsap_serial_header") {
     #############################################################################################################################
     # bsap_serial_header.log
@@ -485,6 +497,9 @@ filter {
         "[zeek_cols][service]" => "bsap"
       }
     }
+
+    mutate { id => "mutate_add_tag_ics_bsap_serial_log"
+             add_tag => [ "ics" ] }
 
   } else if ([log_source] == "bsap_serial_rdb") {
     #############################################################################################################################
@@ -525,6 +540,9 @@ filter {
                remove_field => [ "[zeek_cols][data]" ] }
     }
 
+    mutate { id => "mutate_add_tag_ics_bsap_serial_rdb_log"
+             add_tag => [ "ics" ] }
+
   } else if ([log_source] == "bsap_serial_rdb_ext") {
     #############################################################################################################################
     # bsap_serial_rdb_ext.log
@@ -564,6 +582,9 @@ filter {
                remove_field => [ "[zeek_cols][data]" ] }
     }
 
+    mutate { id => "mutate_add_tag_ics_bsap_serial_rdb_ext_log"
+             add_tag => [ "ics" ] }
+
   } else if ([log_source] == "bsap_serial_unknown") {
     #############################################################################################################################
     # bsap_serial_unknown.log (dropped for now, see above)
@@ -596,6 +617,9 @@ filter {
         "[zeek_cols][service]" => "bsap"
       }
     }
+
+    mutate { id => "mutate_add_tag_ics_bsap_serial_unknown_log"
+             add_tag => [ "ics" ] }
 
   } else if ([log_source] == "bacnet_discovery") {
     #############################################################################################################################
@@ -630,6 +654,9 @@ filter {
       }
     }
 
+    mutate { id => "mutate_add_tag_ics_bacnet_discovery_log"
+             add_tag => [ "ics" ] }
+
   } else if ([log_source] == "bacnet_property") {
     #############################################################################################################################
     # bacnet_property.log
@@ -663,6 +690,9 @@ filter {
       }
     }
 
+    mutate { id => "mutate_add_tag_ics_bacnet_property_log"
+             add_tag => [ "ics" ] }
+
   } else if ([log_source] == "cip") {
     #############################################################################################################################
     # cip.log
@@ -695,6 +725,9 @@ filter {
       add_field => { "[zeek_cols][service]" => "cip" }
     }
 
+    mutate { id => "mutate_add_tag_ics_cip_log"
+             add_tag => [ "ics" ] }
+
   } else if ([log_source] == "cip_identity") {
     #############################################################################################################################
     # cip_identity.log
@@ -726,6 +759,9 @@ filter {
       id => "mutate_add_fields_zeek_cip_identity"
       add_field => { "[zeek_cols][service]" => "cip" }
     }
+
+    mutate { id => "mutate_add_tag_ics_cip_identity_log"
+             add_tag => [ "ics" ] }
 
   } else if ([log_source] == "cip_io") {
     #############################################################################################################################
@@ -763,6 +799,9 @@ filter {
       mutate { id => "mutate_remove_field_zeek_cip_io_io_data"
                remove_field => [ "[zeek_cols][io_data]" ] }
     }
+
+    mutate { id => "mutate_add_tag_ics_cip_io_log"
+             add_tag => [ "ics" ] }
 
   } else if ([log_source] == "dce_rpc") {
     #############################################################################################################################
@@ -938,6 +977,9 @@ filter {
       add_field => { "[zeek_cols][service]" => "dnp3" }
     }
 
+    mutate { id => "mutate_add_tag_ics_dnp3_log"
+             add_tag => [ "ics" ] }
+
   } else if ([log_source] == "dnp3_control") {
     #############################################################################################################################
     # dnp3_control.log
@@ -968,6 +1010,9 @@ filter {
       add_field => { "[zeek_cols][service]" => "dnp3" }
     }
 
+    mutate { id => "mutate_add_tag_ics_dnp3_control_log"
+             add_tag => [ "ics" ] }
+
   } else if ([log_source] == "dnp3_objects") {
     #############################################################################################################################
     # dnp3_objects.log
@@ -997,6 +1042,9 @@ filter {
       id => "mutate_add_fields_zeek_dnp3_objects"
       add_field => { "[zeek_cols][service]" => "dnp3" }
     }
+
+    mutate { id => "mutate_add_tag_ics_dnp3_objects_log"
+             add_tag => [ "ics" ] }
 
   } else if ([log_source] == "dns") {
     #############################################################################################################################
@@ -1112,6 +1160,9 @@ filter {
       add_field => { "[zeek_cols][service]" => "enip" }
     }
 
+    mutate { id => "mutate_add_tag_ics_enip_log"
+             add_tag => [ "ics" ] }
+
   } else if ([log_source] == "ecat_registers") {
     #############################################################################################################################
     # ecat_registers.log
@@ -1143,6 +1194,9 @@ filter {
         "[zeek_cols][service]" => "ethercat"
       }
     }
+
+    mutate { id => "mutate_add_tag_ics_ecat_registers_log"
+             add_tag => [ "ics" ] }
 
   } else if ([log_source] == "ecat_log_address") {
     #############################################################################################################################
@@ -1176,6 +1230,9 @@ filter {
       }
     }
 
+    mutate { id => "mutate_add_tag_ics_ecat_log_address_log"
+             add_tag => [ "ics" ] }
+
   } else if ([log_source] == "ecat_dev_info") {
     #############################################################################################################################
     # ecat_dev_info.log
@@ -1207,6 +1264,9 @@ filter {
         "[zeek_cols][service]" => "ethercat"
       }
     }
+
+    mutate { id => "mutate_add_tag_ics_ecat_dev_info_log"
+             add_tag => [ "ics" ] }
 
   } else if ([log_source] == "ecat_aoe_info") {
     #############################################################################################################################
@@ -1240,6 +1300,9 @@ filter {
       }
     }
 
+    mutate { id => "mutate_add_tag_ics_ecat_aoe_info_log"
+             add_tag => [ "ics" ] }
+
   } else if ([log_source] == "ecat_coe_info") {
     #############################################################################################################################
     # ecat_coe_info.log
@@ -1271,6 +1334,9 @@ filter {
         "[zeek_cols][service]" => "ethercat"
       }
     }
+
+    mutate { id => "mutate_add_tag_ics_ecat_coe_info_log"
+             add_tag => [ "ics" ] }
 
   } else if ([log_source] == "ecat_foe_info") {
     #############################################################################################################################
@@ -1304,6 +1370,9 @@ filter {
       }
     }
 
+    mutate { id => "mutate_add_tag_ics_ecat_foe_info_log"
+             add_tag => [ "ics" ] }
+
   } else if ([log_source] == "ecat_soe_info") {
     #############################################################################################################################
     # ecat_soe_info.log
@@ -1335,6 +1404,9 @@ filter {
         "[zeek_cols][service]" => "ethercat"
       }
     }
+
+    mutate { id => "mutate_add_tag_ics_ecat_soe_info_log"
+             add_tag => [ "ics" ] }
 
   } else if ([log_source] == "ecat_arp_info") {
     #############################################################################################################################
@@ -1749,6 +1821,9 @@ filter {
       add_field =>  { "[zeek_cols][service]" => "cotp" }
     }
 
+    mutate { id => "mutate_add_tag_ics_iso_cotp_log"
+             add_tag => [ "ics" ] }
+
   } else if ([log_source] == "kerberos") {
     #############################################################################################################################
     # kerberos.log
@@ -1864,6 +1939,9 @@ filter {
 
     mutate { id => "mutate_gsub_zeek_known_modbus_device_type"
              gsub => [ "[zeek_cols][device_type]", "Known::", "" ] }
+
+    mutate { id => "mutate_add_tag_ics_known_modbus_log"
+             add_tag => [ "ics" ] }
 
   } else if ([log_source] == "known_services") {
     #############################################################################################################################
@@ -2043,6 +2121,9 @@ filter {
       add_field =>  { "[zeek_cols][service]" => "modbus" }
     }
 
+    mutate { id => "mutate_add_tag_ics_modbus_log"
+             add_tag => [ "ics" ] }
+
   } else if ([log_source] == "modbus_detailed") {
     #############################################################################################################################
     # modbus_detailed.log
@@ -2072,6 +2153,9 @@ filter {
       id => "mutate_add_fields_zeek_modbus_detailed"
       add_field =>  { "[zeek_cols][service]" => "modbus" }
     }
+
+    mutate { id => "mutate_add_tag_ics_modbus_detailed_log"
+             add_tag => [ "ics" ] }
 
   } else if ([log_source] == "modbus_mask_write_register") {
     #############################################################################################################################
@@ -2103,6 +2187,9 @@ filter {
       add_field =>  { "[zeek_cols][service]" => "modbus" }
     }
 
+    mutate { id => "mutate_add_tag_ics_modbus_mask_write_register_log"
+             add_tag => [ "ics" ] }
+
   } else if ([log_source] == "modbus_read_write_multiple_registers") {
     #############################################################################################################################
     # modbus_read_write_multiple_registers.log
@@ -2131,6 +2218,9 @@ filter {
       id => "mutate_add_fields_zeek_modbus_read_write_multiple_registers"
       add_field =>  { "[zeek_cols][service]" => "modbus" }
     }
+
+    mutate { id => "mutate_add_tag_ics_modbus_read_write_multiple_registers_log"
+             add_tag => [ "ics" ] }
 
   } else if ([log_source] == "modbus_register_change") {
     #############################################################################################################################
@@ -2161,6 +2251,9 @@ filter {
       id => "mutate_add_fields_zeek_modbus_register_change"
       add_field =>  { "[zeek_cols][service]" => "modbus" }
     }
+
+    mutate { id => "mutate_add_tag_ics_modbus_register_change_log"
+             add_tag => [ "ics" ] }
 
   } else if ([log_source] == "mqtt_connect") {
     #############################################################################################################################
@@ -2580,6 +2673,9 @@ filter {
       add_field =>  { "[zeek_cols][service]" => "profinet" }
     }
 
+    mutate { id => "mutate_add_tag_ics_zeek_profinet_log"
+             add_tag => [ "ics" ] }
+
   } else if ([log_source] == "profinet_dce_rpc") {
     #############################################################################################################################
     # profinet_dce_rpc.log
@@ -2609,6 +2705,9 @@ filter {
       id => "mutate_add_fields_zeek_profinet_dce_rpc"
       add_field =>  { "[zeek_cols][service]" => "profinet_dce_rpc" }
     }
+
+    mutate { id => "mutate_add_tag_ics_zeek_profinet_dce_rpc_log"
+             add_tag => [ "ics" ] }
 
   } else if ([log_source] == "radius") {
     #############################################################################################################################
@@ -2773,6 +2872,9 @@ filter {
         "[zeek_cols][service]" => "s7comm"
       }
     }
+
+    mutate { id => "mutate_add_tag_ics_zeek_s7comm_log"
+             add_tag => [ "ics" ] }
 
   } else if ([log_source] == "signatures") {
     #############################################################################################################################
