move some of the logstash ruby functions into script files

--- a/logstash/pipelines/enrichment/18_tags_finalize.conf
+++ b/logstash/pipelines/enrichment/18_tags_finalize.conf
@@ -12,10 +12,12 @@ filter {
                            "_geoip_lookup_failure" ] }
 
   # deduplicate tags
-
   ruby {
     id => "ruby_zeek_tags_deduplicate"
-    code => "event.set('[tags]', event.get('[tags]').uniq)"
+    path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+    script_params => {
+      "field" => "tags"
+    }
   }
 
   # count tags (for arkime)
