--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3824,11 +3824,7 @@ filter {
     # remove unset (-) or "(empty)" top-level field values
     ruby {
       id => "ruby_zeek_remove_empty_values"
-      code => "
-        fieldsHash = event.get('[zeek_cols]').to_hash
-        fieldsHash.delete_if{|_,v| ((v == nil) or (v == '') or (v == '-') or (v == '(empty)'))}
-        event.set('[zeek_cols]', fieldsHash)
-      "
+      path => "/usr/share/logstash/malcolm-ruby/compact_event.rb"
     }
   } else {
     drop { id => "drop_dissect_error" }
@@ -4022,7 +4018,11 @@ filter {
       }
       ruby {
         id => "ruby_zeek_conn_vlanCnt"
-        code => "event.set('[network][vlan][id-cnt]', event.get('[network][vlan][id]').length)"
+        path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
+        script_params => {
+          "source" => "[network][vlan][id]"
+          "target" => "[network][vlan][id-cnt]"
+        }
       }
     }
 
@@ -4095,9 +4095,12 @@ filter {
                  split => { "[zeek_dhcp][msg_types]" => "," } }
       ruby {
         id => "ruby_zeek_dhcp_msg_types"
-        code => "event.set('[zeek_dhcp][msg_types]', event.get('[zeek_dhcp][msg_types]').uniq)"
+        path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+        script_params => {
+          "field" => "[zeek_dhcp][msg_types]"
+        }
       }
-      mutate { id => "mutate_split_zeek_dhcp_type"
+      mutate { id => "mutate_merge_zeek_dhcp_type"
                merge => { "[dhcp][type]" => "[zeek_dhcp][msg_types]" } }
     }
 
@@ -4121,7 +4124,11 @@ filter {
     if ([dhcp][host]) {
       ruby {
         id => "ruby_zeek_dhcp_hostCnt"
-        code => "event.set('[dhcp][hostCnt]', event.get('[dhcp][host]').length)"
+        path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
+        script_params => {
+          "source" => "[dhcp][host]"
+          "target" => "[dhcp][hostCnt]"
+        }
       }
     }
 
@@ -4184,7 +4191,11 @@ filter {
                merge => { "[dns][ip]" => "[@metadata][answers_ip]" } }
       ruby {
         id => "ruby_zeek_dns_ipCnt"
-        code => "event.set('[dns][ipCnt]', event.get('[dns][ip]').length)"
+        path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
+        script_params => {
+          "source" => "[dns][ip]"
+          "target" => "[dns][ipCnt]"
+        }
       }
     }
 
@@ -4352,7 +4363,11 @@ filter {
     if ([http][bodyMagic]) {
       ruby {
         id => "ruby_zeek_http_bodyMagicCnt"
-        code => "event.set('[http][bodyMagicCnt]', event.get('[http][bodyMagic]').length)"
+        path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
+        script_params => {
+          "source" => "[http][bodyMagic]"
+          "target" => "[http][bodyMagicCnt]"
+        }
       }
     }
 
@@ -4876,11 +4891,10 @@ filter {
         # remove unset (-) or "(empty)" referenced_file (now zeek_smb_files) subfield values
         ruby {
           id => "ruby_zeek_remove_empty_smb_cmd_referenced_file_values"
-          code => "
-            fieldsHash = event.get('[zeek_smb_files]').to_hash
-            fieldsHash.delete_if{|_,v| ((v == nil) or (v == '') or (v == '-') or (v == '(empty)'))}
-            event.set('[zeek_smb_files]', fieldsHash)
-          "
+          path => "/usr/share/logstash/malcolm-ruby/compact_event_hash.rb"
+          script_params => {
+            "field" => "[zeek_smb_files]"
+          }
         }
 
         # collect referenced file FUID(s) at parent level (here rather than in 12_zeek_normalize.conf because
@@ -4910,7 +4924,11 @@ filter {
       if ([smb][filename]) {
         ruby {
           id => "ruby_zeek_smb_files_filenameCnt"
-          code => "event.set('[smb][filenameCnt]', event.get('[smb][filename]').length)"
+          path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
+          script_params => {
+            "source" => "[smb][filename]"
+            "target" => "[smb][filenameCnt]"
+          }
         }
       }
 
@@ -4930,7 +4948,11 @@ filter {
                    merge => { "[smb][share]" => "[@metadata][smb_share]" } }
           ruby {
             id => "ruby_zeek_smb_files_shareCnt"
-            code => "event.set('[smb][shareCnt]', event.get('[smb][share]').length)"
+            path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
+            script_params => {
+              "source" => "[smb][share]"
+              "target" => "[smb][shareCnt]"
+            }
           }
         }
       }
@@ -4967,7 +4989,11 @@ filter {
     if ([smb][share]) {
       ruby {
         id => "ruby_zeek_smb_mapping_shareCnt"
-        code => "event.set('[smb][shareCnt]', event.get('[smb][share]').length)"
+        path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
+        script_params => {
+          "source" => "[smb][share]"
+          "target" => "[smb][shareCnt]"
+        }
       }
     }
 
@@ -4999,9 +5025,19 @@ filter {
                                          merge => { "[email][src]" => "[zeek_smtp][reply_to]" } } }
     if ([email][src]) {
       ruby {
-        id => "ruby_zeek_smtp_src"
-        code => "event.set('[email][src]', event.get('[email][src]').uniq)
-                 event.set('[email][srcCnt]', event.get('[email][src]').length)"
+        id => "ruby_zeek_email_src_uniq"
+        path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+        script_params => {
+          "field" => "[email][src]"
+        }
+      }
+      ruby {
+        id => "ruby_zeek_email_src_add_count"
+        path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
+        script_params => {
+          "source" => "[email][src]"
+          "target" => "[email][srcCnt]"
+        }
       }
     }
 
@@ -5019,9 +5055,19 @@ filter {
     }
     if ([email][dst]) {
       ruby {
-        id => "ruby_zeek_smtp_dst"
-        code => "event.set('[email][dst]', event.get('[email][dst]').uniq)
-                 event.set('[email][dstCnt]', event.get('[email][dst]').length)"
+        id => "ruby_zeek_email_dst_uniq"
+        path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+        script_params => {
+          "field" => "[email][dst]"
+        }
+      }
+      ruby {
+        id => "ruby_zeek_email_dst_add_count"
+        path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
+        script_params => {
+          "source" => "[email][dst]"
+          "target" => "[email][dstCnt]"
+        }
       }
     }
 
@@ -5047,7 +5093,11 @@ filter {
     if ([zeek_smtp][id]) {
       ruby {
         id => "ruby_zeek_smtp_idCnt"
-        code => "event.set('[email][idCnt]', event.get('[email][id]').length)"
+        path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
+        script_params => {
+          "source" => "[email][id]"
+          "target" => "[email][idCnt]"
+        }
       }
     }
 
@@ -5408,13 +5458,21 @@ filter {
   if ([protocol]) {
     ruby {
       id => "ruby_zeek_protocolCnt"
-      code => "event.set('[protocolCnt]', event.get('[protocol]').length)"
+      path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
+      script_params => {
+        "source" => "[protocol]"
+        "target" => "[protocolCnt]"
+      }
     }
   }
   if ([user]) {
     ruby {
       id => "ruby_zeek_userCnt"
-      code => "event.set('[userCnt]', event.get('[user]').length)"
+      path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
+      script_params => {
+        "source" => "[user]"
+        "target" => "[userCnt]"
+      }
     }
   }
 
