--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -75,7 +75,10 @@ filter {
   if ([zeek][service_version]) {
     ruby {
       id => "ruby_zeek_service_version_uniq"
-      code => "event.set('[zeek][service_version]', event.get('[zeek][service_version]').uniq)"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[zeek][service_version]"
+      }
     }
   }
 
@@ -875,14 +878,20 @@ filter {
   if ([zeek][action]) {
     ruby {
       id => "ruby_zeek_action_uniq"
-      code => "event.set('[zeek][action]', event.get('[zeek][action]').uniq)"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[zeek][action]"
+      }
     }
   }
 
   if ([zeek][result]) {
     ruby {
       id => "ruby_zeek_result_uniq"
-      code => "event.set('[zeek][result]', event.get('[zeek][result]').uniq)"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[zeek][result]"
+      }
     }
   }
 
@@ -914,7 +923,10 @@ filter {
   if ([zeek][fuid]) {
     ruby {
       id => "ruby_zeek_fuid_uniq"
-      code => "event.set('[zeek][fuid]', event.get('[zeek][fuid]').uniq)"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[zeek][fuid]"
+      }
     }
   }
 
@@ -948,7 +960,10 @@ filter {
   if ([zeek][filetype]) {
     ruby {
       id => "ruby_zeek_filetype_uniq"
-      code => "event.set('[zeek][filetype]', event.get('[zeek][filetype]').uniq)"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[zeek][filetype]"
+      }
     }
   }
 
@@ -985,7 +1000,10 @@ filter {
   if ([zeek][filename]) {
     ruby {
       id => "ruby_zeek_filename_uniq"
-      code => "event.set('[zeek][filename]', event.get('[zeek][filename]').uniq)"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[zeek][filename]"
+      }
     }
   }
 
