--- a/logstash/pipelines/zeek/20_zeek_to_ecs.conf
+++ b/logstash/pipelines/zeek/20_zeek_to_ecs.conf
@@ -426,7 +426,10 @@ filter {
     if ([related][ip]) {
       ruby {
         id => "ruby_related_ip_uniq"
-        code => "event.set('[related][ip]', event.get('[related][ip]').uniq)"
+        path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+        script_params => {
+          "field" => "[related][ip]"
+        }
       }
     }
 
