minor tweaks after reviewing pipelines

--- a/logstash/pipelines/enrichment/18_tags_finalize.conf
+++ b/logstash/pipelines/enrichment/18_tags_finalize.conf
@@ -11,7 +11,7 @@ filter {
                            "_ouilookupfailure",
                            "_geoip_lookup_failure" ] }
 
-  # deduplicate tags
+  # deduplicate and count tags
   ruby {
     id => "ruby_zeek_tags_deduplicate"
     path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
@@ -19,12 +19,13 @@ filter {
       "field" => "tags"
     }
   }
-
-  # count tags (for arkime)
-
   ruby {
     id => "ruby_enrichment_tagsCnt"
-    code => "event.set('[tagsCnt]', event.get('[tags]').length)"
+    path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
+    script_params => {
+      "source" => "[tags]"
+      "target" => "[tagsCnt]"
+    }
   }
   mutate {
     id => "mutate_convert_enrichment_tagsCnt"
