--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -4365,6 +4365,13 @@ filter {
 
     if ([http][bodyMagic]) {
       ruby {
+        id => "ruby_zeek_http_bodyMagic_uniq"
+        path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+        script_params => {
+          "field" => "[http][bodyMagic]"
+        }
+      }
+      ruby {
         id => "ruby_zeek_http_bodyMagicCnt"
         path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
         script_params => {
@@ -4925,6 +4932,13 @@ filter {
       if ([zeek_smb_files][prev_name]) { mutate { id => "mutate_merge_zeek_smb_files_prev_name_to_filename"
                                                  merge => { "[smb][filename]" => "[zeek_smb_files][prev_name]" } } }
       if ([smb][filename]) {
+        ruby {
+          id => "ruby_zeek_smb_files_filename_uniq"
+          path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+          script_params => {
+            "field" => "[smb][filename]"
+          }
+        }
         ruby {
           id => "ruby_zeek_smb_files_filenameCnt"
           path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
