--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -257,6 +257,22 @@ filter {
                replace => { "[zeek_cols][service]" => "rdp" } }
     }
 
+    if (([zeek_cols][service] == "bacnet") or
+        ([zeek_cols][service] == "bsap") or
+        ([zeek_cols][service] == "cip") or
+        ([zeek_cols][service] == "cotp") or
+        ([zeek_cols][service] == "dnp3") or
+        ([zeek_cols][service] == "ecat") or
+        ([zeek_cols][service] == "enip") or
+        ([zeek_cols][service] == "ethercat") or
+        ([zeek_cols][service] == "modbus") or
+        ([zeek_cols][service] == "profinet") or
+        ([zeek_cols][service] == "profinet_dce_rpc") or
+        ([zeek_cols][service] == "s7comm")) {
+      mutate { id => "mutate_add_tag_ics_conn_log"
+               add_tag => [ "ics" ] }
+    }
+
     mutate { id => "mutate_add_field_zeek_conn_segmentCnt"
              add_field => { "[segmentCnt]" => "1" } }
 
