Tag conn.log appropriately for ICS traffic

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -265,6 +265,7 @@ filter {
         ([zeek_cols][service] == "ecat") or
         ([zeek_cols][service] == "enip") or
         ([zeek_cols][service] == "ethercat") or
+        ([zeek_cols][service] == "iso_cotp") or
         ([zeek_cols][service] == "modbus") or
         ([zeek_cols][service] == "profinet") or
         ([zeek_cols][service] == "profinet_dce_rpc") or
